--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://abinjoseph2050.github.io/movie-finder",
   "name": "my-first-app",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,8 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy" : "gh-pages -d build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
