--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "homepage" : "https://abinjoseph2050.github.io/movie-finder",
   "name": "my-first-app",
+  "homepage": "https://abinjoseph2050.github.io/movie-finder/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy" : "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
